# sctp_poc

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h
common/: common.h
server/: CMakeLists.txt  server.cpp  server.h
